syntax = "proto3";

package kessel.inventory.v1beta2;

import "buf/validate/validate.proto";
import "kessel/inventory/v1beta2/resource_reference.proto";
import "kessel/inventory/v1beta2/consistency.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

// CheckSelfBulkRequestItem represents a single permission check for the caller
// (self) in a bulk request. The subject is derived from the caller's
// authenticated identity rather than being provided explicitly.
message CheckSelfBulkRequestItem {
  ResourceReference object = 1 [(buf.validate.field).required = true];
  string relation = 2 [(buf.validate.field).string.min_len = 1];
}

// CheckSelfBulkRequest allows checking multiple permissions for the caller
// (self) in a single request. This is more efficient than making individual
// CheckSelf calls when verifying permissions for multiple
// resource-relation combinations.
message CheckSelfBulkRequest {
	repeated CheckSelfBulkRequestItem items = 1 [(buf.validate.field).repeated.min_items = 1,
  (buf.validate.field).repeated.max_items = 1000];
	Consistency consistency = 2;
}


